# cericompiler

./: .clang-format  CMakeLists.txt  README.md  compilateur.cpp  compilateur.hpp  makefile  test.p  tokeniser.l
.github/workflows/: ccpp.yml
src/: codegen.cpp  codegen.hpp  compilateur.cpp  compilateur.hpp  compiler.cpp  compiler.hpp  exceptions.hpp  function.hpp  keywords.cpp  keywords.hpp  main.cpp  operators.cpp  operators.hpp  token.cpp  token.hpp  tokeniser.hpp  tokeniser.l  typedefs.hpp  types.cpp  types.hpp  usertype.cpp  usertype.hpp  variable.cpp  variable.hpp
src/ast/: visitor.cpp  visitor.hpp
src/ast/nodes/: all.hpp  common.hpp  declaration.cpp  declaration.hpp  expression.cpp  expression.hpp  forward.hpp  statement.cpp  statement.hpp
src/ast/visitors/: debugprint.cpp  debugprint.hpp  typeevaluator.cpp  typeevaluator.hpp  x86codegen.cpp  x86codegen.cpp.autosave  x86codegen.hpp
src/codegen/x86/: codegen.cpp  codegen.hpp
src/util/: enums.hpp  string_view.cpp  string_view.hpp
std/stdc/: math.pas
tests/: CMakeLists.txt  big-numbers.p  bitwise-not.p  bitwise-not.pas  boolean-variables.p  comment-test.p  display-arithmetic-tests.p  display-arithmetic-tests.pas  display-for-test.p  display-if-test.p  display-while-test.p  display.p  duplicate-include.pas  fail-case-call-extra-params.p  fail-case-call-missing-params.pas  fail-case-duplicate-ffi.p  fail-case-duplicate-type.p  fail-case-duplicate-variable.p  fail-case-if-non-boolean.pas  fail-case-include-missing.pas  fail-case-invalid-dot.p  fail-case-invalid-dot.pas  fail-case-mismatch-binop.p  fail-case-mismatch-binop.pas  fail-case-mismatch-boolean-in-arithmetic.p  fail-case-mismatch-boolean-in-arithmetic.pas  fail-case-mismatch-variable.p  fail-case-mismatch-variable.pas  fail-case-pointer-mismatch.pas  fail-case-unknown-variable.p  fail-case-user-type-convert.p  fail-case-while-non-boolean.p  ffi-include-mathh.p  ffi-test-cos.p  ffi-test-fmod.pas  ffi-test-no-params.pas  flow-control-for.p  flow-control-for.pas  flow-control-while.p  ghetto-helloworld.p  (+32 more)
